tests/paczka1/small_fuzzy/31015446.err
Error in line 4: Yhu S679 74,8
Error in line 8: tzCHV5XB8 A380 56,6
